# recipe

./: .env.dev  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: settings.py  urls.py
app/app/: settings.py
app/core/tests/: test_commands.py
core/: admin.py  models.py  urls.py
core/management/commands/: wait_for_db.py
core/migrations/: 0001_initial.py  0002_recipe.py
core/tests/: test_admin.py  test_models.py
recipe/: serializers.py
user/: serializers.py  urls.py  views.py
user/test/: test_user_api.py
